--- a/Learn HTML, CSS.html
+++ b/Learn HTML, CSS.html
@@ -146,6 +146,13 @@
         <strong>CSS Margin.</strong>
         The CSS margin property defines a margin (space) outside the border.
         
+        Use the HTML style attribute for inline styling
+        Use the HTML <strong>style</strong> element to define internal CSS
+        Use the HTML <strong>link</strong> element to refer to an external CSS file
+        Use the HTML <strong>head</strong> element to store <strong>style</strong> and <strong>link</strong> elements
+        Use the CSS color property for text colors
+        Use the CSS font-family property for text fonts
+        Use the CSS font-size property for text sizes
 
       </pre>
       
