Update Learn HTML, CSS.html

--- a/Learn HTML, CSS.html
+++ b/Learn HTML, CSS.html
@@ -153,7 +153,9 @@
         Use the CSS color property for text colors
         Use the CSS font-family property for text fonts
         Use the CSS font-size property for text sizes
-
+        Use the CSS border property for borders
+        Use the CSS padding property for space inside the border
+        Use the CSS margin property for space outside the border
       </pre>
       
   </body>
